NDL: changed background-size to cover to make sure it covers the container.

--- a/web/interface/themes/ndl/css/480mobilewide.css
+++ b/web/interface/themes/ndl/css/480mobilewide.css
@@ -21,7 +21,6 @@
     .backgroundContainer {
         width:100%;
         margin:0 auto;
-        background-size: 1020px auto;
     }
     
     #logo {
