--- a/web/interface/themes/ndl/css/default.css
+++ b/web/interface/themes/ndl/css/default.css
@@ -23,7 +23,7 @@ body {
 .backgroundContainer {
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: cover;
     width:100%;
     position:absolute;
     max-height: 600px;
